--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,32 @@ figure {
 .about-desc p{
     text-align: initial;
 }
+
 .cartoon img{
   width: 30%;
   float: right;
+}
+.row1{
+  margin-left: 50px;
+  display:inline-block;
+}
+.services {
+  text-decoration: none;
+  margin-bottom: 80px;
+  position: relative;
+  z-index: 0;
+  padding: 1.5em;
+  border-bottom: 2px solid #ec5453;
+  box-shadow: 0px 0px 56px -8px rgb(0 0 0 / 17%);;
+}
+.details{
+  width: 400px;
+ 
+}
+.details h3{
+  text-align: center;
+  
+}
+.details h4 .span1{
+  float:right;
 }
