--- a/css/style.css
+++ b/css/style.css
@@ -262,3 +262,168 @@ figure {
 .details h4 .span1{
   float:right;
 }
+
+.fade-in-text{
+  padding: 20px;
+
+  font-size: 20px;
+  align-items: center;
+  align-content: center;
+  background-color: rgb(60, 60, 60);
+  box-shadow: 0px 0px 56px -8px rgba(0, 3, 7, 0.535);;
+  animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.fade-in-text p{
+color: white;
+}
+.fade-in-text img{
+  width: 30px;
+  animation: fadeIn 10s;
+}
+/*------skills---------- */
+.colorlib-skills{
+  margin: 10px 10px 0 25em;
+  padding-top: 10px;
+}
+.skills_section{
+
+  padding: 0px 13%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 100px;
+}
+.skills_head{
+  width: 100%;
+  margin-bottom: 30px;
+  display: grid;
+  place-items: center;
+  text-align: center;
+}
+
+.skills_main{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 30px;
+  grid-column-gap: 50px;
+}
+.skills_main .skill_bar .info{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding:  0 10px;
+}
+.skill_bar .info p:nth-child(2){
+  font-weight: 500;
+}
+.skill_bar .bar{
+  width: 100%;
+  height: 10px;
+  background-color: rgba(0, 0, 0, 0.144);
+  border-radius: 25px;
+  margin-top: 5px;
+  position: relative;
+}
+.skill_bar .bar span{
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  background-color: black;
+  border-radius: 25px;
+}
+.skill_bar .bar .html{
+  width: 90%;
+  animation: html 2s;
+}
+@keyframes html {
+  0%{
+      width: 0%;
+  }100%{
+      width: 90%;
+  }
+}
+.skill_bar .bar .css{
+  width: 85%;
+  animation: css 2s;
+}
+@keyframes css {
+  0%{
+      width: 0%;
+  }100%{
+      width: 85%;
+  }
+}
+.skill_bar .bar .sass{
+  width: 80%;
+  animation: sass 2s;
+}
+@keyframes sass {
+  0%{
+      width: 0%;
+  }100%{
+      width: 80%;
+  }
+}
+.skill_bar .bar .js{
+  width: 80%;
+  animation: css 2s;
+}
+@keyframes js {
+  0%{
+      width: 0%;
+  }100%{
+      width: 80%;
+  }
+}
+.skill_bar .bar .react{
+  width: 75%;
+  animation: react 2s;
+}
+@keyframes react {
+  0%{
+      width: 0%;
+  }100%{
+      width: 75%;
+  }
+}
+.skill_bar .bar .node{
+  width: 70%;
+  animation: node 2s;
+}
+@keyframes node {
+  0%{
+      width: 0%;
+  }100%{
+      width: 70%;
+  }
+}
+.skill_bar .bar .express{
+  width: 65%;
+  animation: express 2s;
+}
+@keyframes express {
+  0%{
+      width: 0%;
+  }100%{
+      width: 65%;
+  }
+}
+.skill_bar .bar .mongo{
+  width: 60%;
+  animation: mongo 2s;
+}
+@keyframes mongo {
+  0%{
+      width: 0%;
+  }100%{
+      width: 60%;
+  }
+}
